--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "test_cb_project",
+  "name": "chrom-extension-server",
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.16.2",
     "cloudboost": "^2.0.264",
     "ejs": "^2.5.6",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "mongoose": "^4.11.0"
   },
   "devDependencies": {},
   "scripts": {
@@ -16,10 +18,10 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ritishgumber/cloudboost-test-app.git"
+    "url": "git+https://github.com/ritishgumber/add-youtube-link-chrom-extension.git"
   },
   "bugs": {
-    "url": "https://github.com/ritishgumber/cloudboost-test-app/issues"
+    "url": "https://github.com/ritishgumber/add-youtube-link-chrom-extension/issues"
   },
-  "homepage": "https://github.com/ritishgumber/cloudboost-test-app#readme"
+  "homepage": "https://github.com/ritishgumber/add-youtube-link-chrom-extension#readme"
 }
